package com.sse.enums;

public enum MaturityLevel {
    INITIAL,
    EN_PROGRESSION,
    AVANCE,
    EXCELLENT
}
