package com.sse.enums;

public enum Niveau {
    N0,
    N1,
    N2,
    N3
}
