package com.sse.enums;

public enum StatusEvaluation {
    EN_COURS,
    SOUMISE,
    EN_VALIDATION,
    VALIDEE,
    REJETEE
}
