package com.sse.enums;

public enum StatusReponse {
    BROUILLON,
    SOUMISE,
    VALIDEE,
    REJETEE,
    A_CORRIGER
}
