package com.sse.enums;

public enum TypeNotification {
    EVALUATION_ASSIGNED,
    EVALUATION_SUBMITTED,
    EVALUATION_VALIDATED,
    EVALUATION_REJECTED,
    CORRECTION_REQUESTED,
    ADMIN_MESSAGE,
    ANNOUNCEMENT,
    REMINDER,
    RECLAMATION_SUBMITTED,
    SYSTEM
}
