package com.sse.enums;

public enum TypeOrganisme {
    PUBLIC,
    PRIVE,
    SOCIETE_CIVILE
}
