@startuml diagramme_classes
' ============================================================
'  SSE — Diagramme de Classes SIMPLIFIÉ (avec héritage)
' ============================================================

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam roundcorner 8
skinparam padding 5
skinparam nodesep 60
skinparam ranksep 55

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #2C5282
  ArrowColor #2D3748
  HeaderBackgroundColor #EBF4FF
}

title <size:18><b>SSE — Diagramme de Classes</b></size>\n<size:11><color:#666666>Modèle simplifié avec hiérarchie d'héritage des utilisateurs</color></size>

' ============ HIÉRARCHIE D'HÉRITAGE (Utilisateurs) ============

abstract class Utilisateur {
  - id : UUID
  - email : String
  - motDePasse : String
  - nom : String
  - prenom : String
  - telephone : String
  - actif : Boolean
  == Méthodes communes ==
  + seConnecter()
  + consulterProfil()
  + changerMotDePasse()
}

class Administrateur {
  + gererUtilisateurs()
  + gererOrganismes()
  + validerEvaluation()
  + gererReferentiel()
}

class Responsable {
  + remplirEvaluation()
  + soumettreEvaluation()
  + joindrePreuves()
}

class Gouvernement {
  + consulterTableauDeBord()
  + consulterClassement()
}

Utilisateur <|-- Administrateur
Utilisateur <|-- Responsable
Utilisateur <|-- Gouvernement

' ============ ENTITÉS MÉTIER ============

class Organisme {
  - id : UUID
  - nom : String
  - type : TypeOrganisme
  - secteur : String
  - actif : Boolean
}

class Evaluation {
  - id : UUID
  - annee : Integer
  - statut : StatusEvaluation
  - scoreGlobal : Float
  - niveauMaturite : MaturityLevel
  + calculerScore()
}

class Principe {
  - id : UUID
  - numero : Integer
  - nom : String
  - poids : Float
}

class BonnePratique {
  - id : UUID
  - numero : Integer
  - libelle : String
}

class Critere {
  - id : UUID
  - numero : Integer
  - libelle : String
}

class Reponse {
  - id : UUID
  - niveau : Niveau
  - commentaire : String
  - preuves : List
  - statut : StatusReponse
}

class ScorePrincipe {
  - id : UUID
  - score : Float
  - poids : Float
}

class ScoreGlobal {
  - id : UUID
  - annee : Integer
  - score : Float
  - rang : Integer
}

class Notification {
  - id : UUID
  - type : TypeNotification
  - message : String
  - lu : Boolean
}

' ============ ÉNUMÉRATIONS ============
together {
  enum TypeOrganisme {
    PUBLIC
    PRIVE
    SOCIETE_CIVILE
  }
  enum StatusEvaluation {
    EN_COURS
    SOUMISE
    VALIDEE
    REJETEE
  }
  enum StatusReponse {
    BROUILLON
    SOUMISE
    A_CORRIGER
  }
  enum Niveau {
    N0
    N1
    N2
    N3
  }
  enum MaturityLevel {
    INITIAL
    AVANCE
    EXCELLENT
  }
  enum TypeNotification {
    EVALUATION_SUBMITTED
    ADMIN_MESSAGE
    SYSTEM
  }
}

' ============ RELATIONS ============

Organisme "1" o-- "*" Utilisateur : emploie
Organisme "1" o-- "*" Evaluation : contient
Organisme "1" o-- "*" ScoreGlobal

Evaluation "*" --> "1" Organisme
Evaluation "1" *-- "*" Reponse
Evaluation "1" *-- "*" ScorePrincipe

Principe "1" *-- "*" BonnePratique
BonnePratique "1" *-- "*" Critere

Reponse "*" --> "1" Critere
ScorePrincipe "*" --> "1" Principe

Utilisateur "1" o-- "*" Notification : recoit

' Dépendances énumérations
Organisme ..> TypeOrganisme
Evaluation ..> StatusEvaluation
Evaluation ..> MaturityLevel
Reponse ..> Niveau
Reponse ..> StatusReponse
Notification ..> TypeNotification

note bottom of Utilisateur
  <b>Héritage</b> : Utilisateur est abstraite.
  Les 3 sous-classes spécialisent le comportement
  selon le rôle (ADMIN, RESPONSABLE, GOUVERNEMENT).
end note

note right of Evaluation
  <b>Workflow :</b>
  EN_COURS → SOUMISE → VALIDEE
                  (ou REJETEE / A_CORRIGER)
end note

@enduml
